# codebase-mcp

./: .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
src/: config.py  server.py
src/indexer/: chunker.py  manager.py
src/storage/: vectordb.py
src/sync/: git_sync.py
